# ode4solver

./: .gitignore  CMakeLists.txt  README.md
include/: DCMotorSystem.hpp  DynamicSystem.hpp  LorenzAttractor.hpp  MCKSystem.hpp  RK4Integrator.hpp  SystemSimulator.hpp
matlab/: DCMotorControlSystem.m  DCMotorSystem.m  LorenzSystem.m  RK4.m  verify_DCMotor_system.asv  verify_DCMotor_system.m  verify_DCMotor_system_AIcloseloop.m  verify_DCMotor_system_closeloop.asv  verify_DCMotor_system_closeloop.m  verify_DCMotor_system_openloop.m  verify_lorenz_system.m  verify_mck_system.m
src/: CMakeLists.txt  example_DCMotor.cpp  example_Lorenz.cpp  example_MCK.cpp
